# agent-server

./: .gitignore  .taplo.toml  AGENTS.md  README.md  pyproject.toml
.agents/: check.py
.agents/skills/update-dependencies/: SKILL.md
.claude/: settings.json
.github/hooks/: hooks.json
docs/: AGENT.md  AGENT_WEBSOCKET.md  ARCHITECTURE.md  DEVELOPMENT.md  PROTOCOL.md  README.md  ROUTES.md
scripts/: run_agent.py  ws_client.py
src/agent_server/: __init__.py  cli.py  main.py
src/agent_server/agent/: activity_converter.py  activity_stream_converter.py  agent.py  agent_manager.py  agent_worker.py
src/agent_server/agent/prompts/: system_prompt.py
src/agent_server/routes/: activity.py  agent.py  resume.py
src/agent_server/schemas/: activity.py  session.py
src/agent_server/storage/: session_store.py
temp/: temp_openai.py
