[project]
name = "agent-server"
version = "0.1.1"
description = "The server that powers agent-tui"
readme = "README.md"
authors = [
    { name = "DavidKoleczek", email = "45405824+DavidKoleczek@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "SQLAlchemy>=2.0,<2.1",
    "agent-core-toolkit==0.1.5",
    "fastapi[standard]>=0.136,<1.0",
    "interop-router==0.2.0",
    "jiter>=0.15,<1.0",
    "loguru>=0.7,<1.0",
    "pydantic>=2.13,<3.0",
    "tzdata>=2026.2",
    "websockets>=16.0,<17.0",
]

[project.scripts]
agent-server = "agent_server.cli:run"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4",
    "pytest>=9.0",
    "ruff>=0.15",
    "ty>=0.0.35",
]

[build-system]
requires = ["uv_build>=0.11,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "3 days"
exclude-newer-package = { agent-core-toolkit = "2099-01-01", interop-router = "2099-01-01" }

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PT",  # flake-pytest-style
    "PTH", # flake8-use-pathlib
    "RUF", # ruff
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long (formatter makes best-effort attempt)
    # The following rules conflict with the formatter, see: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "ISC002", # multi-line-implicit-string-concatenation
    "W191",   # tab-indentation
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
